--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "private": true,
   "dependencies": {
+    "react-router": "^0.12.4",
     "babel": "^4.4.5",
     "babelify": "^5.0.3",
     "browserify": "^9.0.3",
